# filecoindot

./: .gitignore  Cargo.toml  Dockerfile  README.md  lerna.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backlog_item.md  bug_issue.md  general_issue.md
.github/workflows/: check-licence.yml  ci.yaml  docker.yml  publish.yml  tests.yml
api/: Cargo.toml
api/src/: env.rs  lib.rs  types.rs
cli/: Cargo.toml  README.md  test_run.sh
cli/src/: lib.rs  main.rs
cli/tests/: test_all.rs
filecoindot/: Cargo.toml
filecoindot-cli/: README.md
filecoindot-cli/src/: main.rs
filecoindot-io/: Cargo.toml  README.md
filecoindot-io/src/: lib.rs
filecoindot-nft/: Cargo.toml
filecoindot-nft/src/: lib.rs  types.rs
filecoindot-nft/src/tests/: mint.rs  mock.rs  mod.rs
filecoindot-ocw/: Cargo.toml
filecoindot-ocw/src/: crypto.rs  db.rs  de.rs  env.rs  ext.rs  lib.rs  ocw.rs  result.rs  types.rs
filecoindot-ocw/src/api/: chain_head.rs  chain_height.rs  get_tip_set_by_height.rs  mod.rs
filecoindot-ocw/src/tests/: data.rs  mod.rs  pallet.rs  types.rs
filecoindot-ocw/src/tests/api/: get_tip_set_by_height.rs  mod.rs
filecoindot-ocw/src/tests/ext/: db.rs  env.rs  ext.rs  mod.rs  result.rs  state.rs
filecoindot-proofs/: Cargo.toml
filecoindot-proofs/src/: benchmarking.rs  forest_amt_adaptor.rs  forest_hamt_adaptor.rs  generate.rs  lib.rs  traits.rs  verify.rs
filecoindot-rpc/: Cargo.toml
filecoindot-rpc/src/: lib.rs  result.rs
filecoindot/src/: benchmarking.rs  lib.rs  mock.rs  types.rs
filecoindot/src/ocw/: de.rs  mod.rs  result.rs  types.rs
filecoindot/src/ocw/api/: chain_head.rs  chain_height.rs  mod.rs
filecoindot/src/ocw/tests/: data.rs  get_tip_set_by_height.rs  mod.rs
filecoindot/src/ocw/tests/ext/: db.rs  mod.rs  state.rs
filecoindot/src/tests/: benchmarking.rs  mock.rs  mod.rs  ocw.rs  relayer.rs  verify.rs  vote.rs
filecoindot_ocw/: Cargo.toml
filecoindot_ocw/src/: cache.rs  client.rs  ext.rs  lib.rs  offchain.rs  result.rs  state.rs
filecoindot_ocw/src/api/: mod.rs
filecoindot_ocw/src/tests/: mock.rs  mod.rs  pallet.rs
filecoindot_ocw/tests/: mod.rs  pallet.rs
filecoindot_proofs/: Cargo.toml
filecoindot_proofs/src/: amt.rs  bitmap.rs  blockstore.rs  errors.rs  forest_adaptor.rs  forest_amt_adaptor.rs  forest_hamt_adaptor.rs  generate.rs  hamt.rs  hash_algorithm.rs  hash_bits.rs  lib.rs  node.rs  traits.rs  verify.rs
filecoindot_proofs/tests/: hamt.rs
filecoindot_relayer/: Cargo.toml
filecoindot_relayer/src/: cache.rs  client.rs  lib.rs  result.rs
filecoindot_relayer/src/api/: get_tip_set_by_height.rs
js/: package-lock.json  package.json
js/e2e/: .eslintrc.js  index.ts  package.json  proof.json  setup.ts  tsconfig.json
js/e2e/src/: api.ts  index.ts  launch.ts  runner.ts
js/scripts/: pre-publish.ts  publish.ts
js/types/: README.md  index.ts  package.json
relayer/: Cargo.toml
relayer/src/: api.rs  client.rs  db.rs  env.rs  lib.rs  result.rs  testing.rs  traits.rs  types.rs
relayer/src/api/: mod.rs
resources/: types.json
scripts/: setup.json  setup.sh
src/: App.tsx  index.css  index.tsx
src/components/layout/: Center.tsx
src/containers/Header/: index.tsx
src/containers/UserSpace/: index.tsx
src/ducks/: rootSaga.ts  store.ts
src/ducks/substrate/: sagas.ts  selectors.ts
src/pages/: Home.tsx  MintNFT.tsx
substrate-node-example/: Dockerfile  README.md
substrate-node-example/node/: Cargo.toml  build.rs
substrate-node-example/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
substrate-node-example/pallets/example-offchain-worker/: Cargo.toml
substrate-node-example/pallets/example-offchain-worker/src/: lib.rs
substrate-node-example/pallets/template/: Cargo.toml
substrate-node-example/pallets/template/src/: lib.rs
substrate-node-example/runtime/: Cargo.toml  build.rs
substrate-node-example/runtime/src/: lib.rs
substrate-node-example/runtime/src/weights/: filecoindot.rs  mod.rs
ui/:  babel.config.json  .env.example  .eslintrc.json  .prettierrc.js  README.md  package.json  tsconfig.json
ui/public/: index.html  manifest.json
ui/src/: App.tsx  index.tsx  proof.ts
ui/src/components/layout/: Center.tsx
ui/src/constants/: substrate.ts
ui/src/containers/AccountSelect/: index.tsx
ui/src/containers/Header/: index.tsx
ui/src/containers/UserSpace/: index.tsx
ui/src/contexts/: AccountsContext.tsx  ApiContext.tsx  NftContext.tsx
ui/src/hooks/: usNft.tsx  useBuckets.tsx  useDidUpdateEffect.tsx
ui/src/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-tx.ts  lookup.ts  types-lookup.ts  types.ts
ui/src/modules/: Minting.tsx
ui/src/pages/: Home.tsx  MintNFT.tsx  NFTList.tsx  VerifyBlock.tsx
web-react-example/: .prettierrc.js  package.json
web-react-example/src/: App.tsx
web-react-example/src/constants/: substrate.ts
web-react-example/src/containers/AccountSelect/: index.tsx
web-react-example/src/containers/Header/: index.tsx
web-react-example/src/containers/Settings/: index.tsx
web-react-example/src/containers/UserSpace/: index.tsx
web-react-example/src/ducks/: rootSaga.ts  store.ts
web-react-example/src/ducks/substrate/: actions.ts  sagas.ts  selectors.ts  slice.ts
