[package]
name = "filecoindot-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3.2"
cid = { package = "forest_cid", version = "0.3" }
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
thiserror = "1.0"
sha2 = "0.10.1"
once_cell = "1.5"
parking_lot = "0.11"
num-traits = "0.2.14"
ipld_hamt = { git = "https://github.com/willeslau/forest", branch = "willes/filecoindot" }
ipld_amt = { git = "https://github.com/willeslau/forest", branch = "willes/filecoindot" }
forest_ipld = { version = "0.1.1" }
forest_encoding = { version = "0.2.1" }
forest_hash_utils = { version = "0.1" }
forest_db = { git = "https://github.com/willeslau/forest", branch = "willes/filecoindot" }
ipld_blockstore = { git = "https://github.com/willeslau/forest", branch = "willes/filecoindot" }
serde_cbor = { version = "0.12", features = ["tags"], package = "cs_serde_cbor" }
