[package]
name = "filecoindot-rpc"
authors = ['tianyi@chainsafe.io']
description = 'filecoindot rpcs.'
version = "0.0.1"
license = "GPL-3.0"
homepage = 'https://github.com/ChainSafe/filecoindot'
repository = 'https://github.com/ChainSafe/filecoindot'
edition = "2021"

[dependencies]
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
derive_more = "^0.99"
thiserror = "^1"
parking_lot = "^0.10"
url = "2.2.2"

# substrate dependencies
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

# filecoindot dependencies
filecoindot-proofs = { path = "../filecoindot-proofs" }
