[package]
name = "filecoindot_ocw"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "^0.1"
bincode = "^1"
dirs = "4.0.0"
serde = { version = "^1", features = [ "derive" ] }
thiserror = "^1"
codec = { package = "parity-scale-codec", version = "^2"}

# substrate dependencies
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

# filecoindot
filecoindot = { path = "../filecoindot" }


[dev-dependencies]
tokio-test = "0.4.2"

# substrate dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

# filecoindot dependencies


[features]
default = [ "std" ]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std"
]

