[package]
name = "filecoindot_proofs"
authors = ['matthias@chainsafe.io']
description = 'Proof Generation and Verification for filecoindot.'
version = '0.0.1'
license = "GPL-3.0"
homepage = 'https://github.com/ChainSafe/filecoindot'
repository = 'https://github.com/ChainSafe/filecoindot'
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", features = ['derive'], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
ipld_hamt = { git = "https://github.com/mattsse/forest", branch = "matt/expose-ipld-root-node" }
ipld_amt = { git = "https://github.com/mattsse/forest", branch = "matt/expose-ipld-root-node" }
ipld_blockstore = { git = "https://github.com/mattsse/forest", branch = "matt/expose-ipld-root-node" }
cid = { package = "forest_cid", git = "https://github.com/mattsse/forest", branch = "matt/expose-ipld-root-node", features = ["cbor"], version = "0.3" }

[dev-dependencies]
db = { package = "forest_db", git = "https://github.com/mattsse/forest", branch = "matt/expose-ipld-root-node", version = "0.1" }
ipld_blockstore = { git = "https://github.com/mattsse/forest", branch = "matt/expose-ipld-root-node", features = ["tracking"]  }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
