[package]
name = "filecoindot_proofs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forest_encoding = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3.2"
cid = { package = "forest_cid", version = "0.3" }
ipld_blockstore = "0.1"
forest_ipld = "0.1.1"
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
thiserror = "1.0"
sha2 = "0.9.1"
once_cell = "1.5"
forest_hash_utils = "0.1"
parking_lot = "0.11"
num-traits = "0.2.14"
ipld_hamt = { git = "https://github.com/willeslau/forest", branch = "willes/filecoindot" }
forest_db = { git = "https://github.com/willeslau/forest", branch = "willes/filecoindot" }