[package]
name = "relayer"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "^0.1"
bincode = "^1"
dirs = "4.0.0"
reqwest = { version = "^0.11", features = [ "json" ] }
rocksdb = "0.17.0"
serde = { version = "^1", features = [ "derive" ] }
thiserror = "^1"

[dev-dependencies]
tokio-test = "0.4.2"
